CODETOOLS-7903091: Convert jtreg to use NIO